dfir_rs/tests/compile-fail-stable/surface_loop_missing_unwindowing.stderr
error: Operator `null(...)` exiting a loop context must be an un-windowing operator, but is not.
 --> tests/compile-fail-stable/surface_loop_missing_unwindowing.rs:7:14
  |
7 |         b -> null();
  |              ^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_loop_missing_unwindowing.rs:9:8
  |
9 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
